--- a/.github/workflows/build-using-makefile.yml
+++ b/.github/workflows/build-using-makefile.yml
@@ -1,10 +1,10 @@
-name: Build
+name: Build Makefile
 
 on: 
   workflow_dispatch:
 
 jobs:
-  build:
+  build_using_makefile:
     runs-on: ubuntu-latest
 
     steps:
