--- a/.github/workflows/build-using-makefile.yml
+++ b/.github/workflows/build-using-makefile.yml
@@ -20,4 +20,4 @@ jobs:
         run: npm install
         
       - name: Run index.js
-        run: make run -f ${makefile}
+        run: make run -f Makefile
